# common.py

./: CHANGELOG.md  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: python-ci.yml  python-pr.yml
docs/: conf.py  index.rst
python/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/_sources/: api.rst.txt
requirements/: dev.txt  docs.txt  pkg.txt  tests.txt
src/sweetrpg_common/: __init__.py  constants.py
tests/: test_this.py
