[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-common
version = attr: sweetrpg_common.__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/common
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = =src
include_package_data = true
python_required = >= 3.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-common = sweetrpg_common.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_common
    tests

[coverage:paths]
source =
    src

[semantic_release]
version_variable = src/sweetrpg_common/__init__.py:__version__
branch = develop
